Small fixes in users controller, list of users programs, spacing of Program#show

--- a/app/assets/stylesheets/my_settings.scss
+++ b/app/assets/stylesheets/my_settings.scss
@@ -149,6 +149,9 @@ td {
 
 .prog-show {
   padding: 10px;
+  .row {
+    padding-top: 6px;
+  }
 }
 
 .prog-title {
